--- a/css/index.css
+++ b/css/index.css
@@ -171,6 +171,9 @@ body {
   grid-gap: 10px;
   grid-template-columns: repeat(auto-fill, minmax(210px, 2fr));
 }
+.entries.space2x {
+  grid-gap: 20px;
+}
 
 @media (max-width: 560px) {
   .entries {
@@ -311,6 +314,9 @@ a.entry:hover {
   max-height: 220px;
   object-fit: cover;
   border-radius: 4px;
+}
+.entry-img.border {
+  border: 1px solid rgba(0,0,0,0.25);
 }
 
 .entry-icon {
