--- a/css/index.css
+++ b/css/index.css
@@ -307,11 +307,12 @@ body {
 .entries {
   display: grid;
   grid-gap: 10px;
-  grid-template-columns: repeat(auto-fill, minmax(210px, 2fr));
+  grid-auto-columns: 1fr;
   margin-bottom: 40px;
 }
 .entries.space2x {
   grid-gap: 25px;
+  grid-template-columns: repeat(auto-fill, minmax(210px, 2fr));
 }
 
 @media (max-width: 560px) {
