--- a/css/index.css
+++ b/css/index.css
@@ -26,7 +26,8 @@ body {
 
 .header {
     width: 100%;
-    padding: 30px 0
+    padding: 30px 0;
+    background-color: #5543ff;
 }
 
 .header a {
@@ -42,13 +43,20 @@ body {
 
 .beaker-link {
   display: inline-flex;
-  align-items: center
+  align-items: center;
+  justify-content: center;
+    background-color: white;
+  border-radius: 20px;
+    width: 170px;
+    height: 36px;
 }
 
 .beaker-link .logo {
   width: 30px;
   height: 30px;
-  margin-right: 7px
+  margin-right: 7px;
+  
+    
 }
 
 .beaker-link .wordmark {
@@ -64,6 +72,7 @@ body {
   font-size: .9rem;
   font-weight: 600;
   text-decoration: none;
+  color: white;
 }
 
 .btn {
